# hand-decomposition-16bit-generator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  hand-updated.blend  hand-updated.fbx  run.sh
blender/: hand-updated-2.blend  hand-updated-2.fbx  hand-updated-3.fbx  hand_decomposition.blend  hand_decomposition.blend1  hand_decomposition.fbx
hand-texture-generator/: main.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
output/texture_frames/: generate_movie.sh
resources/models/: hand.fbx  testy.fbx
resources/shaders/: fragment.glsl  uv_fragment.glsl  vertex.glsl
src/: feature_flags.cpp  feature_flags.h  gl_error_logger.cpp  gl_error_logger.h  logger.cpp  logger.h  main.cpp  window.cpp  window.h
src/events/: event.h  event_dispatcher.h  key_code.h  key_events.h  mouse_events.h  window_events.h
src/file_system/: file_writer.cpp  file_writer.h
src/file_system/macosx/: watch.cpp  watch.h
src/mesh/: loader.cpp  loader.h  mesh.cpp  mesh.h  square.cpp  square.h  texture.h  triangle.cpp  triangle.h  vertex.h
src/pch/: pch.h
src/primitives/: square.cpp  square.h  triangle.cpp  triangle.h
src/scene/: scene.cpp  scene.h
src/scene/camera/: camera.h  orbit.cpp  orbit.h
src/scene/components/: components.h  indexed_mesh.h  material.h  transform.h
src/scene/render/: command.cpp  command.h  fbo.cpp  fbo.h  image_writer.cpp  image_writer.h  msaa_fbo.cpp  msaa_fbo.h  renderer.cpp  renderer.h
src/scene/render/api/: opengl.cpp  opengl.h  renderer_api.cpp  renderer_api.h
src/scene/render/fbo/: base_fbo.h  bit_depth_16.cpp  bit_depth_16.h  msaa_fbo.cpp  msaa_fbo.h
src/scene/systems/: render.cpp  render.h  systems.h
src/shaders/: compiler.cpp  compiler.h  program.cpp  program.h  texture_16bit_generator.cpp  texture_16bit_generator.h  texture_loader.cpp  texture_loader.h  uniform_buffer.cpp  uniform_buffer.h
src/shaders/glsl/basic/: basic_material.cpp  basic_material.h  fragment.glsl  uv_material.cpp  uv_material.h  vertex.glsl
